testsuite/tests/typecheck/should_fail/UnliftedNewtypesFail.hs
{-# LANGUAGE UnliftedNewtypes #-}

main :: IO ()
main = return ()

newtype Baz = Baz (Show Int)
